--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {"editor.defaultFormatter": "esbenp.prettier-vscode", "[javascript]" : {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-}, "editorFormatOnSave": true 
+},
+"editorFormatOnSave": true,
+"liveServer.settings.port": 5501
 }
